--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "@inquirer/prompts": "^8.2.1",
     "better-sqlite3": "^11.8.1",
     "bybit-api": "^4.5.3",
     "chalk": "^5.4.1",
