--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/bybit-cli/bybit-cli.git"
+    "url": "https://github.com/superclawclaw/bybit-cli.git"
   },
   "homepage": "https://github.com/bybit-cli/bybit-cli#readme",
   "bugs": {
