rename: bb → bbt command name
- package.json bin: bb → bbt
- Commander program name: bb → bbt
- README, CLAUDE.md, SKILLS.md: all examples updated

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Command-line interface for Bybit exchange with multi-account management, real-time monitoring, and full trading support",
   "type": "module",
   "bin": {
-    "bb": "./dist/index.js"
+    "bbt": "./dist/index.js"
   },
   "files": [
     "dist",
